# sentiric-sip-mobile-uac

./: Makefile  README.md  pubspec.yaml
.github/workflows/: release.yml
lib/: main.dart  telecom_telemetry.dart
lib/src/rust/api/: simple.dart
rust/: Cargo.toml  build.rs
rust/src/api/: simple.rs
