[package]
name = "mobile_uac"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]  # cdylib, Android .so dosyası için zorunludur

[dependencies]
sentiric-sip-uac-core = { git = "https://github.com/sentiric/sentiric-sip-uac-core.git", branch = "main" }
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
# YENİ: Android loglarını konsola basmak için
android_logger = "0.13"
log = "0.4"
