[package]
name = "mobile_uac"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# YENİ SDK - Doğru isimle
sentiric-telecom-client-sdk = { git = "https://github.com/sentiric/sentiric-telecom-client-sdk.git", branch = "main" }

flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
android_logger = "0.13"
log = "0.4"